fixed heart not showing

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ h1 {
     padding: 25px 0;
     width: 1000px;
     box-sizing: border-box;
-    background-image: url('/images/heart.png');
+    background-image: url('images/heart.png');
     background-size: contain;
     border-radius: 15px;
     backdrop-filter: blur(25px);
@@ -195,6 +195,7 @@ body {
     position: relative;
     width: 50%;
     padding: 20px 40px;
+    margin-right: 1px;
     box-sizing: border-box;
 }
 
@@ -266,9 +267,10 @@ body {
 }
 
 .yes-button {
+    font-family: 'Raleway', sans-serif;
     background-color: var(--primary-red);
     color: #fff;
-    padding: 10px 30px;
+    padding: 10px 35px;
     font-size: 16px;
     margin-right: 10px;
     border: none;
@@ -277,9 +279,10 @@ body {
 }
 
 .no-button {
+    font-family: 'Raleway', sans-serif;
     border: 1px solid var(--primary-red);
     color: var(--primary-red);
-    padding: 10px 30px;
+    padding: 10px 35px;
     font-size: 16px;
     margin-right: 10px;
     border-radius: 5px;
@@ -291,7 +294,6 @@ body {
 }
 
 
-/* Add styles for the Valentine's GIF container */
 #valentineGifContainer {
     margin-top: 20px;
     max-width: 100%;
@@ -332,11 +334,11 @@ body {
 }
 
 .timeline ul li:nth-child(odd):before {
-    right: -26px;
+    right: -25.5px;
 }
 
 .timeline ul li:nth-child(even):before {
-    left: 0px;
+    left: -0.5px;
 }
 
 .timeline ul li h3 {
